--- a/TH1/ActiveMQDemo/.project
+++ b/TH1/ActiveMQDemo/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ActiveMQDemo11</name>
+	<name>ActiveMQDemo</name>
 	<comment></comment>
 	<projects>
 	</projects>
